--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -43,7 +43,7 @@
   "iconBar": {
     "allTasks": "所有任务",
     "calendar": "日历",
-    "aiSummary": "AI 摘要",
+    "aiSummary": "AI 总结",
     "accountSettings": "应用设置"
   },
   "addListModal": {
@@ -261,14 +261,14 @@
   },
   "summary": {
     "history": {
-      "title": "摘要历史",
-      "tooltip": "查看所有生成的摘要",
+      "title": "总结历史",
+      "tooltip": "查看所有生成的总结",
       "close": "关闭历史记录",
-      "description": "浏览和搜索历史摘要。",
+      "description": "浏览和搜索历史总结。",
       "searchPlaceholder": "搜索历史...",
-      "emptyState": "还没有生成任何摘要。",
-      "noResults": "没有找到与 \"{{searchTerm}}\" 匹配的摘要。",
-      "selectPrompt": "选择一个摘要以查看详情。"
+      "emptyState": "还没有生成任何总结。",
+      "noResults": "没有找到与 \"{{searchTerm}}\" 匹配的总结。",
+      "selectPrompt": "选择一个总结以查看详情。"
     },
     "periods": {
       "today": "今天",
@@ -284,7 +284,7 @@
       "all": "所有列表",
       "select": "选择列表"
     },
-    "generate": "生成摘要",
+    "generate": "生成总结",
     "generating": "生成中...",
     "generateDisabled": "AI功能已禁用（离线模式）",
     "tasksTitle": "相关任务",
@@ -296,20 +296,20 @@
       "title": "未找到相关任务",
       "description": "请调整筛选条件或检查任务状态/进度。"
     },
-    "newSummary": "新摘要",
-    "title": "摘要",
+    "newSummary": "新总结",
+    "title": "总结",
     "generated": "生成于",
     "doneEditing": "完成",
     "tasksUsed": "使用了 {{count}} 个任务",
     "tasksUsed_plural": "使用了 {{count}} 个任务",
     "referencedTasks": "引用的任务",
     "noReferencedTasks": "未找到引用的任务。",
-    "older": "更早的摘要",
-    "newer": "更新的摘要",
+    "older": "更早的总结",
+    "newer": "更新的总结",
     "saving": "保存中...",
     "noSummary": {
-      "title": "暂无摘要",
-      "description": "选择任务并生成一个新的摘要。"
+      "title": "暂无总结",
+      "description": "选择任务并生成一个新的总结。"
     }
   },
   "moondown": {
@@ -333,6 +333,6 @@
   "prompts": {
     "taskAnalysis": "你是一位任务解析专家。你的目标是将用户的自然语言输入转换为结构化的 JSON 对象。当前日期是 {{currentDate}}。你的输出必须是一个遵循以下确切模式的有效 JSON 对象，并确保所有字段都存在：\n\n{\n  \"title\": \"string (简洁清晰，最多60个字符)\",\n  \"content\": \"string (任务的详细描述、目标或背景；支持 Markdown 格式)\",\n  \"subtasks\": [\n    {\n      \"title\": \"string (一个具体的操作项)\",\n      \"dueDate\": \"string (可选, YYYY-MM-DD 格式)\"\n    }\n  ],\n  \"tags\": [\n    \"string (相关的关键词或分类)\"\n  ],\n  \"priority\": \"number (1 为高, 2 为中, 3 为低, 或在未指定时为 null)\",\n  \"dueDate\": \"string (可选, 主任务的 YYYY-MM-DD 格式截止日期)\"\n}\n\n'content' 字段示例：\"目标是为工程部门组织一次团队建设活动。这应包括寻找场地、策划有趣的活动以及管理1000美元的预算。可以使用 Markdown **进行格式化**。\"\n\n请分析用户的提示并提取所有相关细节。如果缺少某个细节，请使用合理的默认值或空值（例如，子任务/标签使用 []，优先级/截止日期使用 null）。不要在 JSON 对象之外添加任何文本。",
     "textContinuation": "你是一位专业的作家和 AI 助手，擅长进行连贯的文本续写。你将获得一份文档的上下文，包括任务标题、前文（prefix）和后文（suffix），以及一个 {FILL_ME} 标记，指示写入位置。你的任务是在 {FILL_ME} 的位置无缝地续写文本。\n\n写作指南：\n1.  **理解上下文**：仔细分析任务标题、前文和后文，以掌握主题、语气、风格和逻辑流程。\n2.  **无缝衔接**：撰写一段充实且有意义的续写内容，自然地连接前文和后文。不要简短；力求对思想进行全面而深入的扩展。\n3.  **避免重复**：不要重复周围文本中已有的信息。\n4.  **保持专注**：维持已建立的叙述、论点或描述。不要引入不相关的主题。\n5.  **仅输出续写内容**：你的回答应仅包含替换 {FILL_ME} 的文本。不要重复前文或后文。",
-    "taskSummary": "你是一位专业的项目经理和报告助手。你的任务是根据特定时期内的任务列表和即将进行的任务列表，以 Markdown 格式生成一份全面而富有洞察力的工作摘要。\n\n生成指南：\n1.  **全局分析**：不要仅仅罗列任务。综合信息以识别模式、进展和潜在问题。\n2.  **结构化报告**：将摘要组织成逻辑清晰的章节。根据所提供的任务，自主决定以下哪些部分是相关的，并生成它们。你不必使用所有部分，只选择那些根据数据有意义的章节：\n    *   `### 已完成工作`：详细说明已完成的事项。提及关键成就及其影响。\n    *   `### 进行中的工作`：描述正在进行中的任务。如果可能，突出它们的当前状态和完成百分比。\n    *   `### 挑战与解决方案`：如果任务表明存在困难（例如，逾期、进展缓慢），推断出挑战，并尽可能提出或描述已实施的解决方案。\n    *   `### 心得与反思`：提供从工作期间获得的见解。哪些方面做得好？哪些可以改进？\n    *   `### 潜在风险与障碍`：识别任何可能对未来进展构成风险的逾期或高优先级待办任务。\n    *   `### 未来计划与后续步骤`：根据“未来计划”任务列表，概述下一阶段的计划。将其与当前工作联系起来。\n3.  **阐述与升华**：使用专业而引人入胜的语调。通过添加背景和解读，超越简单的列表。你可以适度地进行'艺术夸张'，使报告更具说服力，但必须以提供的任务数据为基础。\n4.  **格式清晰**：使用 Markdown（标题、粗体、项目符号）创建一份干净、易读的报告。在进入详细章节之前，以一个简洁的概述段落开始。\n5.  **直接开始生成报告**: 你的回复必须直接以 Markdown 摘要内容开始。不要包含任何开场白、介绍性语句（例如“好的，这是您的总结...”）或任何解释性文字。输出的第一行必须是 Markdown 报告的一部分，例如一个标题 `### 已完成工作`。"
+    "taskSummary": "你是一位专业的项目经理和报告助手。你的任务是根据特定时期内的任务列表和即将进行的任务列表，以 Markdown 格式生成一份全面而富有洞察力的工作总结。\n\n生成指南：\n1.  **全局分析**：不要仅仅罗列任务。综合信息以识别模式、进展和潜在问题。\n2.  **结构化报告**：将总结组织成逻辑清晰的章节。根据所提供的任务，自主决定以下哪些部分是相关的，并生成它们。你不必使用所有部分，只选择那些根据数据有意义的章节：\n    *   `### 已完成工作`：详细说明已完成的事项。提及关键成就及其影响。\n    *   `### 进行中的工作`：描述正在进行中的任务。如果可能，突出它们的当前状态和完成百分比。\n    *   `### 挑战与解决方案`：如果任务表明存在困难（例如，逾期、进展缓慢），推断出挑战，并尽可能提出或描述已实施的解决方案。\n    *   `### 心得与反思`：提供从工作期间获得的见解。哪些方面做得好？哪些可以改进？\n    *   `### 潜在风险与障碍`：识别任何可能对未来进展构成风险的逾期或高优先级待办任务。\n    *   `### 未来计划与后续步骤`：根据“未来计划”任务列表，概述下一阶段的计划。将其与当前工作联系起来。\n3.  **阐述与升华**：使用专业而引人入胜的语调。通过添加背景和解读，超越简单的列表。你可以适度地进行'艺术夸张'，使报告更具说服力，但必须以提供的任务数据为基础。\n4.  **格式清晰**：使用 Markdown（标题、粗体、项目符号）创建一份干净、易读的报告。在进入详细章节之前，以一个简洁的概述段落开始。\n5.  **直接开始生成报告**: 你的回复必须直接以 Markdown 总结内容开始。不要包含任何开场白、介绍性语句（例如“好的，这是您的总结...”）或任何解释性文字。输出的第一行必须是 Markdown 报告的一部分，例如一个标题 `### 已完成工作`。"
   }
 }
