--- a/packages/core/src/locales/zh-CN/translation.json
+++ b/packages/core/src/locales/zh-CN/translation.json
@@ -27,7 +27,7 @@
     "searchPlaceholder": "搜索任务...",
     "allTasks": "所有任务",
     "today": "今天",
-    "next7Days": "未来7天",
+    "next7days": "未来7天",
     "inbox": "收件箱",
     "myLists": "我的列表",
     "noCustomLists": "暂无自定义列表。",
