--- a/packages/core/src/locales/en/translation.json
+++ b/packages/core/src/locales/en/translation.json
@@ -161,34 +161,34 @@
       }
     },
     "profile": {
-      "title": "Profile",
-      "description": "Personalize your AI experience",
-      "persona": "Your Role",
-      "personaDescription": "Select roles that describe you. This helps personalize AI outputs.",
+      "title": "You",
+      "description": "Help us get you.",
+      "persona": "Role",
+      "personaDescription": "Pick one.",
       "wrm": {
-        "title": "Work Preferences",
-        "taskView": "Task Preference",
-        "taskViewDescription": "How do you prefer to view your tasks?",
+        "title": "Habits",
+        "taskView": "What matters more?",
+        "taskViewDescription": "To you personally.",
         "taskViewOptions": {
-          "process": "Process-focused",
-          "outcome": "Outcome-focused"
+          "process": "The Process",
+          "outcome": "The Result"
         },
-        "uncertaintyTolerance": "Uncertainty Tolerance",
-        "uncertaintyToleranceDescription": "How do you handle uncertainty in tasks?",
+        "uncertaintyTolerance": "When things are vague...",
+        "uncertaintyToleranceDescription": "What's your move?",
         "uncertaintyToleranceOptions": {
-          "low": "I prefer clear outcomes",
-          "high": "I'm comfortable with ambiguity"
+          "low": "Ask first",
+          "high": "Figure it out"
         },
-        "incompletionStyle": "Completion Style",
-        "incompletionStyleDescription": "How should incomplete tasks be communicated?",
+        "incompletionStyle": "If not finished...",
+        "incompletionStyleDescription": "How to log it?",
         "incompletionStyleOptions": {
-          "narrative": "Narrative style",
-          "explicit": "Direct and explicit"
+          "narrative": "Log my thoughts",
+          "explicit": "State the reason"
         }
       },
-      "userNote": "Personal Note",
-      "userNoteDescription": "Add context about your work style, habits, or anything that affects your productivity.",
-      "userNotePlaceholder": "e.g., I get interrupted easily, I prefer tackling hard tasks in the morning..."
+      "userNote": "Anything else?",
+      "userNoteDescription": "Small details help.",
+      "userNotePlaceholder": "e.g. I work late, or I hate meetings."
     },
     "ai": {
       "title": "AI Settings",
@@ -588,16 +588,16 @@
     "start": "Let's go",
     "getStarted": "Get Started",
     "welcome": {
-      "title": "Welcome to Tada",
-      "subtitle": "A few quick questions to personalize your experience"
+      "title": "Hi.",
+      "subtitle": "Let's get to know each other."
     },
     "step1": {
-      "title": "What's your main work?",
+      "title": "What do you do?",
       "hint": "Select all that apply"
     },
     "step3": {
-      "title": "Anything you want me to remember?",
-      "hint": "Optional, but helps personalize AI responses"
+      "title": "Anything else?",
+      "hint": "Like you're a bit slow in doing things, or hate emails."
     },
     "personas": {
       "dev": "Tech / Dev",
